--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,8 @@
   <groupId>in.ainulit</groupId>
   <artifactId>JRTP-01-App</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+ <maven.compiler.source>1.8</maven.compiler.source>
+ <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
 </project>
